[2025.11.19] add constants class, organize codes